try fix textarea on mobile device

--- a/public/themes/ourtheme/cabinet/css/valeraVersionCss/popup.css
+++ b/public/themes/ourtheme/cabinet/css/valeraVersionCss/popup.css
@@ -43,3 +43,7 @@
 .messageRow {
 	display: none;
 }
+
+textarea {
+	max-width: 90%;
+}
